// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utbetalinger with kontonummer renders correctly 1`] = `
<DocumentFragment>
  <div
    class="box__wrapper"
    id="utbetaling"
  >
    <div
      class="navds-guide-panel navds-guide-panel--poster"
    >
      <div
        class="navds-guide"
      >
        <div
          class="navds-guide__illustration navds-guide__illustration--medium"
        >
          <img
            alt=""
            class="box__ikon"
            src="Kontonummer.svg"
          />
        </div>
      </div>
      <div
        class="navds-guide-panel__content"
      >
        <div
          class="box__container"
        >
          <div
            class="box__header"
          >
            <div
              class="box__title-container"
            >
              <div
                class="box__line"
              />
              <h2
                class="box__title navds-heading navds-heading--medium"
              >
                Kontonummer for utbetaling
              </h2>
              <div
                class="box__line"
              />
            </div>
            <a
              aria-label="Direktelenke til denne seksjonen"
              class="navds-link anchor-link"
              href="#utbetaling"
            >
              <img
                alt=""
                src="AnchorLink.svg"
              />
              Lenke hit
            </a>
          </div>
          <div
            class="box__content"
          >
            <div
              style="padding-bottom: 1rem;"
            >
              <div
                class="navds-alert navds-alert--warning navds-alert--medium"
              >
                <svg
                  aria-labelledby="title-aksel-icon-1"
                  class="navds-alert__icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-aksel-icon-1"
                  >
                    Advarsel
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M11.126.564a.962.962 0 0 1 1.741-.021l11.011 21.912c.358.695-.117 1.54-.865 1.54H.987c-.738 0-1.215-.826-.876-1.519L11.126.564ZM11 7.996h2v7h-2v-7Zm1 12a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
                    fill="#D47B00"
                    fill-rule="evenodd"
                  />
                </svg>
                <div
                  class="navds-alert__wrapper navds-body-long"
                >
                  På grunn av tekniske oppgraderinger er det ikke mulig å registrere eller endre kontonummer fredag 9. desember i tidsrommet 16.00-21.00. Vi beklager dette, og ber deg forsøke igjen senere.
                </div>
              </div>
            </div>
            <ul
              class="list-column-2"
            >
              <li>
                <div
                  class="listelement__header"
                >
                  <p
                    class="navds-label"
                  >
                    Kontonummer
                  </p>
                </div>
                <div
                  class="content "
                >
                  1234 56 78911
                </div>
                <p
                  class="navds-body-short"
                />
              </li>
            </ul>
            <div
              class="kilde__container"
            >
              <button
                class="kilde__knapp knapp-med-ikon navds-button navds-button--tertiary navds-button--medium"
              >
                <span
                  aria-live="polite"
                  class="navds-label"
                >
                  <span
                    class="kilde__icon"
                  >
                    <img
                      alt=""
                      src="Pencil.svg"
                    />
                  </span>
                  <p
                    class="navds-body-long"
                  >
                    Endre
                  </p>
                </span>
              </button>
              <div
                class="kilde__tekst"
              >
                <p
                  class="navds-detail"
                >
                  Kilde: NAV
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Utbetalinger with utenlandsk bank renders correctly 1`] = `
<DocumentFragment>
  <div
    class="box__wrapper"
    id="utbetaling"
  >
    <div
      class="navds-guide-panel navds-guide-panel--poster"
    >
      <div
        class="navds-guide"
      >
        <div
          class="navds-guide__illustration navds-guide__illustration--medium"
        >
          <img
            alt=""
            class="box__ikon"
            src="Kontonummer.svg"
          />
        </div>
      </div>
      <div
        class="navds-guide-panel__content"
      >
        <div
          class="box__container"
        >
          <div
            class="box__header"
          >
            <div
              class="box__title-container"
            >
              <div
                class="box__line"
              />
              <h2
                class="box__title navds-heading navds-heading--medium"
              >
                Kontonummer for utbetaling
              </h2>
              <div
                class="box__line"
              />
            </div>
            <a
              aria-label="Direktelenke til denne seksjonen"
              class="navds-link anchor-link"
              href="#utbetaling"
            >
              <img
                alt=""
                src="AnchorLink.svg"
              />
              Lenke hit
            </a>
          </div>
          <div
            class="box__content"
          >
            <div
              style="padding-bottom: 1rem;"
            >
              <div
                class="navds-alert navds-alert--warning navds-alert--medium"
              >
                <svg
                  aria-labelledby="title-aksel-icon-2"
                  class="navds-alert__icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-aksel-icon-2"
                  >
                    Advarsel
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M11.126.564a.962.962 0 0 1 1.741-.021l11.011 21.912c.358.695-.117 1.54-.865 1.54H.987c-.738 0-1.215-.826-.876-1.519L11.126.564ZM11 7.996h2v7h-2v-7Zm1 12a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
                    fill="#D47B00"
                    fill-rule="evenodd"
                  />
                </svg>
                <div
                  class="navds-alert__wrapper navds-body-long"
                >
                  På grunn av tekniske oppgraderinger er det ikke mulig å registrere eller endre kontonummer fredag 9. desember i tidsrommet 16.00-21.00. Vi beklager dette, og ber deg forsøke igjen senere.
                </div>
              </div>
            </div>
            <ul
              class="list-column-2"
            >
              <li>
                <h3
                  class="navds-heading navds-heading--small"
                >
                  Bank
                </h3>
                <p
                  class="navds-body-short"
                >
                  Dominion Bank
                </p>
                <p
                  class="navds-body-short"
                >
                  Forente Arabiske Emirater
                </p>
              </li>
              <li>
                <div
                  class="listelement__header"
                >
                  <p
                    class="navds-label"
                  >
                    Kontonummer / IBAN
                  </p>
                </div>
                <div
                  class="content "
                >
                  AE460090000000123456789
                </div>
                <p
                  class="navds-body-short"
                />
              </li>
              <li>
                <div
                  class="listelement__header"
                >
                  <p
                    class="navds-label"
                  >
                    Valuta
                  </p>
                </div>
                <div
                  class="content "
                >
                  Amerikansk dollar
                </div>
                <p
                  class="navds-body-short"
                />
              </li>
              <li>
                <div
                  class="listelement__header"
                >
                  <p
                    class="navds-label"
                  >
                    BIC / SWIFT-kode
                  </p>
                </div>
                <div
                  class="content "
                >
                  EBILAEADXXX
                </div>
                <p
                  class="navds-body-short"
                />
              </li>
            </ul>
            <div
              class="kilde__container"
            >
              <button
                class="kilde__knapp knapp-med-ikon navds-button navds-button--tertiary navds-button--medium"
              >
                <span
                  aria-live="polite"
                  class="navds-label"
                >
                  <span
                    class="kilde__icon"
                  >
                    <img
                      alt=""
                      src="Pencil.svg"
                    />
                  </span>
                  <p
                    class="navds-body-long"
                  >
                    Endre
                  </p>
                </span>
              </button>
              <div
                class="kilde__tekst"
              >
                <p
                  class="navds-detail"
                >
                  Kilde: NAV
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
